--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -6,18 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".MainActivity" >
-
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/weekly"
-            android:textColor="@color/blue"
-            android:background="@null"
-            android:textStyle="bold"
-            android:onClick="weeklyAction"
-            android:textSize="20sp"/>
+        tools:context=".WeekViewActivity" >
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -33,7 +22,7 @@
                 android:textColor="@color/blue"
                 android:background="@null"
                 android:textStyle="bold"
-                android:onClick="previousMonthAction"
+                android:onClick="previousWeekAction"
                 android:textSize="20sp"/>
         <TextView
                 android:id="@+id/monthYearTV"
@@ -52,7 +41,7 @@
                 android:textColor="@color/blue"
                 android:background="@null"
                 android:textStyle="bold"
-                android:onClick="nextMonthAction"
+                android:onClick="nextWeekAction"
                 android:textSize="20sp"/>
 
     </LinearLayout>
@@ -128,6 +117,24 @@
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/calendarRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/new_event"
+            android:textColor="@color/blue"
+            android:background="@null"
+            android:textStyle="bold"
+            android:onClick="newEventAction"
+            android:layout_gravity="center"
+            android:textSize="20sp"/>
+
+    <ListView
+            android:id="@+id/eventListView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5"/>
 
 </LinearLayout>
